@startuml
skinparam classAttributeIconSize 0

Package Presentation{
class SearchProductCatalogByBrandUI {
    +doShow()
    +findProductsByBrand()
}

class SearchProductCatalogByCategoryUI {
    +doShow()
    +findProductsByCategory()
}

class SearchProductCatalogByShortDescriptionUI {
    +doShow()
    +findProductsByShortDescription()
}

}

Package Application{

class SearchProductCatalogByBrandController {
    +findProductsByBrand()
}

class SearchProductCatalogByCategoryController {
    +findProductsByCategory()
}

class SearchProductCatalogByShortDescriptionController {
    +findProductsByShortDescription()
}

class SearchProductCatalogService{
    +findProductsByBrand()
    +findProductsByCategory()
    +findProductsByShortDescription()
}
}

Package Domain{

class ProductCatalog {
}

class Product{
  -internalCode
  -shortDescription
  -extendedDescription
  -technicalDescription
  -brand
  -reference
  -productionCode
  -price
  -barcode
  -photo
}
}


Package Persistence{
class RepositoryFactory{
    productCatalog()
}

class ProductCatalogRepository{
    +findProductsByBrand()
    +findProductsByCategory()
    +findProductsByShortDescription()
}
}

Package InMemory{
class InMemoryProductCatalogRepository{
    +findProductsByBrand()
    +findProductsByCategory()
    +findProductsByShortDescription()
}

class InMemoryRepositoryFactory{
    productCatalog()
}
}

Package Jpa{
class JpaProductCatalogRepository{
    +findProductsByBrand()
    +findProductsByCategory()
    +findProductsByShortDescription()
}

class JpaRepositoryFactory{
    productCatalog()
}   
}

SearchProductCatalogByBrandUI ..> SearchProductCatalogByBrandController
SearchProductCatalogByCategoryUI ..> SearchProductCatalogByCategoryController
SearchProductCatalogByShortDescriptionUI ..> SearchProductCatalogByShortDescriptionController
SearchProductCatalogByBrandController ..> SearchProductCatalogService
SearchProductCatalogByCategoryController ..> SearchProductCatalogService
SearchProductCatalogByShortDescriptionController ..> SearchProductCatalogService
SearchProductCatalogService ..> ProductCatalog
ProductCatalog ..> Product
SearchProductCatalogService ..> ProductCatalogRepository
SearchProductCatalogService ..> RepositoryFactory
RepositoryFactory ..> ProductCatalogRepository
InMemoryRepositoryFactory ..> RepositoryFactory : implements
JpaRepositoryFactory ..> RepositoryFactory : implements
InMemoryRepositoryFactory ..> InMemoryProductCatalogRepository : creates
JpaRepositoryFactory ..> JpaProductCatalogRepository : creates
InMemoryProductCatalogRepository ..> ProductCatalogRepository : implements
JpaProductCatalogRepository ..> ProductCatalogRepository : implements

@enduml